# APDU-Library

./: CMakeLists.txt
nfc/src/: apdu.cpp  nfcManager.cpp
